--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">AnUI</string>
+    <string name="action_settings">Settings</string>
     <string name="edit_message">请输入内容</string>
     <string name="button_send">完成</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
 </resources>
