--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">AnUI</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
+    <string name="action_about">关于</string>
+    <string name="action_site">官网</string>
+    <string name="action_exit">退出</string>
     <string name="edit_message">请输入内容</string>
     <string name="button_send">完成</string>
-    <string name="drawer_open">Open</string>
-    <string name="drawer_close">Close</string>
+    <string name="drawer_open">开</string>
+    <string name="drawer_close">关闭</string>
 </resources>
